pod-security-vpol/baseline/restrict-sysctls/.kyverno-test/resource.yaml
###### Pods - Bad
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: kernel.shm_next_id
      value: "4"
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "2"
    - name: kernel.shm_next_id
      value: "4"
###### Pods - Good
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: dummyimagename
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "2"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: net.ipv4.ip_local_port_range
      value: "31000    60999"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: net.ipv4.ip_unprivileged_port_start
      value: "2048"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: net.ipv4.tcp_syncookies
      value: "0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: net.ipv4.ping_group_range
      value: "1   0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: net.ipv4.ip_unprivileged_port_start
      value: "2048"
    - name: net.ipv4.ping_group_range
      value: "1   0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod08
spec:
  containers:
  - name: container01
    image: dummyimagename
  securityContext:
    sysctls:
    - name: net.ipv4.ip_local_reserved_ports
      value: "8080"
    - name: net.ipv4.tcp_keepalive_time
      value: "600"
    - name: net.ipv4.tcp_fin_timeout
      value: "30"
    - name: net.ipv4.tcp_keepalive_intvl
      value: "30"
    - name: net.ipv4.tcp_keepalive_probes
      value: "5"
    - name: net.ipv4.tcp_rmem
      value: "4096 87380 6291456"
    - name: net.ipv4.tcp_wmem
      value: "4096 16384 4194304"
    - name: net.ipv4.tcp_slow_start_after_idle
      value: "0"
    - name: net.ipv4.tcp_notsent_lowat
      value: "16384"
---
###### Deployments - Bad
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
      securityContext:
        sysctls:
        - name: kernel.shm_next_id
          value: "4"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: baddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
      securityContext:
        sysctls:
        - name: kernel.shm_rmid_forced
          value: "2"
        - name: kernel.shm_next_id
          value: "4"
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
      securityContext:
        sysctls:
        - name: kernel.shm_rmid_forced
          value: "2"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
      securityContext:
        sysctls:
        - name: net.ipv4.ip_local_port_range
          value: "31000    60999"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "2048"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
      securityContext:
        sysctls:
        - name: net.ipv4.tcp_syncookies
          value: "0"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
      securityContext:
        sysctls:
        - name: net.ipv4.ping_group_range
          value: "1   0"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment07
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "2048"
        - name: net.ipv4.ping_group_range
          value: "1   0"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment08
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: dummyimagename
      securityContext:
        sysctls:
        - name: net.ipv4.ip_local_reserved_ports
          value: "8080"
        - name: net.ipv4.tcp_keepalive_time
          value: "600"
        - name: net.ipv4.tcp_fin_timeout
          value: "30"
        - name: net.ipv4.tcp_keepalive_intvl
          value: "30"
        - name: net.ipv4.tcp_keepalive_probes
          value: "5"
        - name: net.ipv4.tcp_rmem
          value: "4096 87380 6291456"
        - name: net.ipv4.tcp_wmem
          value: "4096 16384 4194304"
        - name: net.ipv4.tcp_slow_start_after_idle
          value: "0"
        - name: net.ipv4.tcp_notsent_lowat
          value: "16384"
---
###### CronJobs - Bad
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
          securityContext:
            sysctls:
            - name: kernel.shm_next_id
              value: "4"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: badcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
          securityContext:
            sysctls:
            - name: kernel.shm_rmid_forced
              value: "2"
            - name: kernel.shm_next_id
              value: "4"
---
###### CronJobs - Good
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
          securityContext:
            sysctls:
            - name: kernel.shm_rmid_forced
              value: "2"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
          securityContext:
            sysctls:
            - name: net.ipv4.ip_local_port_range
              value: "31000    60999"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
          securityContext:
            sysctls:
            - name: net.ipv4.ip_unprivileged_port_start
              value: "2048"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
          securityContext:
            sysctls:
            - name: net.ipv4.tcp_syncookies
              value: "0"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
          securityContext:
            sysctls:
            - name: net.ipv4.ping_group_range
              value: "1   0"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob07
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
          securityContext:
            sysctls:
            - name: net.ipv4.ip_unprivileged_port_start
              value: "2048"
            - name: net.ipv4.ping_group_range
              value: "1   0"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob08
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: dummyimagename
          securityContext:
            sysctls:
            - name: net.ipv4.ip_local_reserved_ports
              value: "8080"
            - name: net.ipv4.tcp_keepalive_time
              value: "600"
            - name: net.ipv4.tcp_fin_timeout
              value: "30"
            - name: net.ipv4.tcp_keepalive_intvl
              value: "30"
            - name: net.ipv4.tcp_keepalive_probes
              value: "5"
            - name: net.ipv4.tcp_rmem
              value: "4096 87380 6291456"
            - name: net.ipv4.tcp_wmem
              value: "4096 16384 4194304"
            - name: net.ipv4.tcp_slow_start_after_idle
              value: "0"
            - name: net.ipv4.tcp_notsent_lowat
              value: "16384"
